# tanning-school-walks

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  HYPOTHESES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
audit_logs/: google_classification_sample_other_regions_20260428.csv  manual_verification.csv
data/: manifest.csv
notebooks/: 00_setup_environment.ipynb  01_schools_acquire.ipynb  02_geography_deprivation.ipynb  03_salons_google_places.ipynb  04_salons_osm_overpass.ipynb  05_salons_audit_agreement.ipynb  05a_manual_verification.ipynb  06_network_build.ipynb  07_catchment_assignment.ipynb  08_routes_and_buffers.ipynb  09_exposure_measurement.ipynb  10_descriptive_replication.ipynb  11_primary_models_h1_h2_h3.ipynb  12_inequality_indices_sii_rii.ipynb  13_sensitivity_analyses.ipynb  14_figures_tables_outputs.ipynb
outputs/tables/: T10_phase_specific_weights_20260428.csv  T11_rigorous_phase_stratified_20260428.csv  T11b_rigorous_quintile_20260428.csv  T12_london_density_by_imd_20260428.csv  T12b_london_per_borough_20260428.csv  T13_cross_regional_density_20260428.csv  T13_verified_density_20260428.csv  T13b_cross_regional_ratios_20260428.csv  T13c_west_midlands_per_lad_20260428.csv  T14_cross_regional_route_rii_20260428.csv  T14_verified_route_rii_20260428.csv  T15_5region_route_rii_20260428.csv  T15_verified_5region_route_rii_20260428.csv  T15_verified_6region_route_rii_20260428.csv  T16_pupil_exposure_headline_20260428.csv  (+21 more)
tests/: conftest.py  test_audit.py  test_catchment.py  test_config.py  test_deprivation.py  test_exposure.py  test_geography.py  test_network.py  test_overpass.py  test_places_google.py  test_population.py  test_routing.py  test_salons_dedupe.py  test_schools.py  test_stats.py  test_verification.py
(+16 files in other folders)
