[project]
name = "schools-sunbeds"
version = "0.1.0"
description = "Tanning salon exposure on walking routes to schools in North East England."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Matthew Bowker", email = "matthew.j.bowker@gmail.com" },
]

# Runtime dependencies are pinned in requirements.txt (the single source of
# truth for both local and Colab). This list is kept in sync so that
# `pip install -e .` brings in the same set when used standalone.
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.10",
    "pyogrio>=0.9",
    "rtree>=1.3",
    "pandana>=0.7",
    "osmnx>=2.0",
    "networkx>=3.3",
    "pandas>=2.2",
    "numpy>=1.26,<2",
    "pyarrow>=17.0",
    "openpyxl>=3.1",
    "rasterio<1.5",
    "requests>=2.32",
    "googlemaps>=4.10",
    "tenacity>=9.0",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "scipy>=1.13",
    "rapidfuzz>=3.9",
    "matplotlib>=3.9",
    "contextily>=1.6",
    "mapclassify>=2.8",
    "papermill>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schools_sunbeds"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
